[gd_scene load_steps=15 format=2]

[ext_resource path="res://Files/background-day.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Files/Font/flappyfont.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Files/message.png" type="Texture" id=6]
[ext_resource path="res://Files/gameover.png" type="Texture" id=7]
[ext_resource path="res://Files/play.png" type="Texture" id=8]
[ext_resource path="res://Files/scoreboard.png" type="Texture" id=9]
[ext_resource path="res://Files/result.png" type="Texture" id=10]
[ext_resource path="res://Files/NewHighScore.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 96.436, 240 )
collision_layer = 3
collision_mask = 2147483649

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="background" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 143.607, 255 )
texture = ExtResource( 1 )

[node name="Boden" parent="." instance=ExtResource( 3 )]
position = Vector2( 179.874, 770 )
cell_size = Vector2( 352, 124 )
tile_data = PoolIntArray( -131073, 0, 0, -196608, 0, 0 )

[node name="Replay" type="Timer" parent="."]
wait_time = 0.42
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="resultscoreUP" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 126.0
margin_top = 70.0
margin_right = 155.0
margin_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 142.73, 223 )
texture = ExtResource( 6 )

[node name="gameover" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 141.642, 142 )
texture = ExtResource( 7 )

[node name="result" type="Sprite" parent="CanvasLayer"]
position = Vector2( 145, 580 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Score" type="Label" parent="CanvasLayer/result"]
margin_left = 38.0
margin_top = -13.0
margin_right = 45.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Label" parent="CanvasLayer/result"]
margin_left = 38.0916
margin_top = 9.33829
margin_right = 45.0
margin_bottom = 26.3383
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewHighScore" type="Sprite" parent="CanvasLayer/result"]
visible = false
position = Vector2( 19, 4 )
texture = ExtResource( 11 )

[node name="Medallion" type="Sprite" parent="CanvasLayer/result"]
position = Vector2( -32.5514, 4.20923 )

[node name="Playbutton" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 29.0
margin_top = 342.0
margin_right = 127.0
margin_bottom = 396.0
focus_mode = 1
enabled_focus_mode = 1
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Sprite" parent="CanvasLayer/Playbutton"]
position = Vector2( 50, 29 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Scorebutton" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 159.0
margin_top = 342.0
margin_right = 260.0
margin_bottom = 398.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreboard" type="Sprite" parent="CanvasLayer/Scorebutton"]
position = Vector2( 51, 29 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="pipespawn" type="Sprite" parent="."]
[connection signal="Death" from="Player" to="." method="_on_Player_Death"]
[connection signal="timeout" from="Replay" to="." method="_on_Replay_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="resultscoreUP" to="Player" method="_on_resultscoreUP_timeout"]
[connection signal="pressed" from="CanvasLayer/Playbutton" to="." method="_on_Playbutton_pressed"]
